--- a/src/index.css
+++ b/src/index.css
@@ -99,7 +99,8 @@ button:focus-visible {
 
 /* Custom scrollbar for WebKit-based browsers (Chrome, Safari, Edge) */
 ::-webkit-scrollbar {
-  width: 5px; /* Set the width of the scrollbar */
+  width: 5px;
+  height: 5px; /* Set the width of the scrollbar */
 }
 
 ::-webkit-scrollbar-track {
